# finance-tracker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  finance.db  pyproject.toml
.claude/agents/: branch-architect-review.md  code-quality-reviewer.md
.github/workflows/: ci.yml
_plans/: admin-member-endpoint-separation.md  auth-and-user-bug-fixes.md  centralized-logging.md  docker-local-dev.md  extended-fastapi-tests.md  github-actions-ci.md  initial-fastapi-tests.md  transaction-model-schema-repository.md  transaction-service-router.md  transaction-table-migration.md  user-role-permissions.md
_specs/: admin-member-endpoint-separation.md  auth-and-user-bug-fixes.md  centralized-logging.md  docker-local-dev.md  extended-fastapi-tests.md  github-actions-ci.md  initial-fastapi-tests.md  template.md  transaction-model-schema-repository.md  transaction-service-router.md  transaction-table-migration.md  user-role-permissions.md
alembic/: env.py
alembic/versions/: 2026_03_09_1402-9c25eea42330_add_user_table.py  2026_03_13_0912-6b90c5a3d39b_seed_admin_user.py  2026_03_19_1558-81ee9b4cc9d0_seed_members.py  2026_04_13_1734-d82b574a14fc_create_transaction_table.py
app/: exception_handlers.py  main.py
app/config/: database.py  logging.py  settings.py
app/dependencies/: auth.py  database.py  params.py  service.py
app/docs/: transaction.py  user.py
app/errors/: auth.py  database.py  params.py  transaction.py  user.py
app/models/: transaction.py  user.py
app/repositories/: transaction.py  user.py
app/routers/: admin_user.py  auth.py  user.py  (+1 more)
tests/: conftest.py  test_auth.py  test_logging_setup.py  test_users.py
(+28 files in other folders)
