[project]
name = "finance-tracker"
version = "0.1.0"
description = "A personal finance tracker API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.41.0",
]
